Advance in geo module. -New Refresh control to reload geojson sources. -Start implementation of PrintControl.