@@ -1,31 +1,31 @@
 /*
  * GDMatrix
- *  
+ *
  * Copyright (C) 2020, Ajuntament de Sant Feliu de Llobregat
- *  
- * This program is licensed and may be used, modified and redistributed under 
- * the terms of the European Public License (EUPL), either version 1.1 or (at 
- * your option) any later version as soon as they are approved by the European 
+ *
+ * This program is licensed and may be used, modified and redistributed under
+ * the terms of the European Public License (EUPL), either version 1.1 or (at
+ * your option) any later version as soon as they are approved by the European
  * Commission.
- *  
- * Alternatively, you may redistribute and/or modify this program under the 
- * terms of the GNU Lesser General Public License as published by the Free 
- * Software Foundation; either  version 3 of the License, or (at your option) 
- * any later version. 
- *   
- * Unless required by applicable law or agreed to in writing, software 
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
- *    
- * See the licenses for the specific language governing permissions, limitations 
+ *
+ * Alternatively, you may redistribute and/or modify this program under the
+ * terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either  version 3 of the License, or (at your option)
+ * any later version.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *
+ * See the licenses for the specific language governing permissions, limitations
  * and more details.
- *    
- * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along 
- * with this program; if not, you may find them at: 
- *    
+ *
+ * You should have received a copy of the EUPL1.1 and the LGPLv3 licenses along
+ * with this program; if not, you may find them at:
+ *
  * https://joinup.ec.europa.eu/software/page/eupl/licence-eupl
- * http://www.gnu.org/licenses/ 
- * and 
+ * http://www.gnu.org/licenses/
+ * and
  * https://www.gnu.org/licenses/lgpl.txt
  */
 package org.santfeliu.pdfgen;
@@ -60,30 +60,29 @@ import org.w3c.dom.svg.SVGDocument;
 public class PdfGenerator
 {
   static SAXSVGDocumentFactory factory;
-  static ArrayList<Class> bridgeRegistry = new ArrayList<Class>();
-  static ThreadLocal<PdfGenerator> generatorThreadLocal = 
-    new ThreadLocal<PdfGenerator>();
+  static ArrayList<Class> bridgeRegistry = new ArrayList<>();
+  static ThreadLocal<PdfGenerator> generatorThreadLocal = new ThreadLocal<>();
 
   private Document document;
   private PdfWriter writer;
-  private HashMap context = new HashMap();
-  
+  private final HashMap context = new HashMap();
+
   static
   {
     String parser = XMLResourceDescriptor.getXMLParserClassName();
-    factory = new SAXSVGDocumentFactory(parser);    
-  } 
-  
+    factory = new SAXSVGDocumentFactory(parser);
+  }
+
   public PdfGenerator()
   {
     generatorThreadLocal.set(this);
   }
-  
+
   public Map getContext()
   {
     return context;
   }
-  
+
   public static PdfGenerator getCurrentInstance()
   {
     return generatorThreadLocal.get();
@@ -132,22 +131,22 @@ public class PdfGenerator
   {
     return writer;
   }
-  
+
   public void addPage(File svgTemplate) throws Exception
   {
     addPage(svgTemplate.toURI().toString());
-  }   
-  
+  }
+
   public void addPage(String svgTemplateUri) throws Exception
   {
     SVGDocument svg = factory.createSVGDocument(svgTemplateUri);
-    
+
     float factor = 72.0f / 90.0f; // auto detect from svg
-    float pageWidth = 
+    float pageWidth =
       factor * svg.getRootElement().getWidth().getBaseVal().getValue();
-    float pageHeight = 
+    float pageHeight =
       factor * svg.getRootElement().getHeight().getBaseVal().getValue();
-    
+
     document.setPageSize(new Rectangle(pageWidth, pageHeight));
     document.newPage();
 
@@ -163,7 +162,8 @@ public class PdfGenerator
         {
           try
           {
-            AbstractSVGBridge bridge = (AbstractSVGBridge)cls.newInstance();
+            AbstractSVGBridge bridge =
+              (AbstractSVGBridge)cls.getConstructor().newInstance();
             putBridge(bridge);
           }
           catch (Exception ex)
@@ -174,22 +174,22 @@ public class PdfGenerator
     };
 
     GVTBuilder builder = new GVTBuilder();
-        
+
     GraphicsNode graphicsNode = builder.build(ctx, svg);
-    
+
     PdfContentByte cb = writer.getDirectContent();
-    
+
     PdfGraphics2D g2d = new PdfGraphics2D(cb, pageWidth, pageHeight);
-    
+
     g2d.scale(factor, factor);
-    
+
     graphicsNode.paint(g2d);
 
     g2d.dispose();
-        
+
     ctx.dispose();
   }
-  
+
   public void close() throws DocumentException
   {
     generatorThreadLocal.remove();
